# realtime-raytracing-demo

./: CMakeLists.txt  README.md  main.c  rt.frag
glad/include/glad/: gl.h
